--- a/views/itemlist.html
+++ b/views/itemlist.html
@@ -21,7 +21,7 @@
 	  Quantity<input type="text" ng-model="item.qty" style="width: 35px;height:30px" >
 
 	  <br><br>
-	  <button type="button" ng-click="cart.addToCart(item)" class="btn btn-inverse btn-block"><span id="cart-total">Add to Cart</span></button>
+	  <button type="button" ng-click="cart.addToCart(item)" class="btn btn-info active btn-block"><span id="cart-total">Add to Cart</span></button>
 	  
 	  </li>
 	  
