--- a/views/itemlist.html
+++ b/views/itemlist.html
@@ -1,7 +1,7 @@
 
 <div class="row">
 	  
-	  <div class="product-listing"> <h2>Item List View</h2>
+	  <div class="product-listing">
 	  <ul>
 	  
 	  <li ng-repeat="item in items | itemFilter:selectedFilter">  
